tests/invalid/types.err_exp2
types.m:  1: Warning: interface for module `types' does not export anything.
types.m:003: Error: constructor `types:a/0' for type `types:t/0' multiply defined.
types.m:003: Error: constructor `types:f/1' for type `types:t/0' multiply defined.
types.m:017: Error: clause for predicate `types:r/0'
types.m:017:   without preceding `pred' declaration.
types.m:020: Error: clause for predicate `types:a/1'
types.m:020:   without preceding `pred' declaration.
types.m:005: Error: no clauses for predicate `types:p/1'.
types.m:012: In clause for predicate `types:q/0':
types.m:012:   error: undefined predicate `zzzzzzzz/0'.
types.m:013: In clause for predicate `types:q/0':
types.m:013:   in argument 1 of call to predicate `p/1':
types.m:013:   type error: argument has type `int',
types.m:013:   expected type was `(pred)'.
types.m:014: In clause for predicate `types:q/0':
types.m:014:   error: wrong number of arguments (0; should be 1)
types.m:014:   in call to predicate `p'.
types.m:039: In clause for predicate `types:bar/1':
types.m:039:   type error in unification of variable `X'
types.m:039:   and constant `0'.
types.m:039:   variable `X' has type `(some [BarTypeParam] BarTypeParam)',
types.m:039:   constant `0' has type `int'.
types.m:050: Error: no clauses for predicate `types:bar2/1'.
types.m:018: In clause for predicate `types:r/0':
types.m:018:   error: undefined predicate `s/0'.
types.m:020: In clause for predicate `types:a/1':
types.m:020:   error: undefined predicate `b/1'.
For more information, try recompiling with `-E'.
